demo/force-app/main/default/objects/Coffee_Order__c/Coffee_Order__c.object-meta.xml
<CustomObject>
    <label>Coffee Order</label>
    <pluralLabel>Coffee Orders</pluralLabel>
    <nameField>
        <label>Coffee Order Number</label>
        <type>AutoNumber</type>
        <displayFormat>CO-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>