demo/force-app/main/default/objects/Coffee_Order__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>