demo/force-app/main/default/objects/Coffee_Order__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <type>Text</type>
    <length>255</length>
</CustomField>