demo/force-app/main/default/objects/Coffee_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>